[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Main Menu/Kembali Button.png" type="Texture" id=1]
[ext_resource path="res://Scene/animasi/cerita_Gui.gd" type="Script" id=2]
[ext_resource path="res://Asset/Home/hOME.png" type="Texture" id=3]

[node name="ceritaGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureButton" parent="."]
margin_right = 174.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="TextureRect2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -87.0
margin_right = 87.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureButton" parent="."]
margin_left = 1105.0
margin_right = 1280.0
margin_bottom = 104.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 87, 42 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="TextureRect" to="." method="_on_TextureRect_pressed"]
[connection signal="pressed" from="TextureRect2" to="." method="_on_TextureRect2_pressed"]
[connection signal="pressed" from="TextureRect3" to="." method="_on_TextureRect3_pressed"]
